--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "dev": "cross-env NODE_ENV=development nest start --watch ",
+    "migration:create": "yarn typeorm -d ./ormconfig.ts migration:create ./src/migrations",
+    "migration:generate": "yarn typeorm -d ./ormconfig.ts migration:generate ./src/migrations",
+    "migration:revert": "yarn typeorm -d ./ormconfig.ts migration:revert",
+    "seed": "ts-node ./node_modules/@jorgebodega/typeorm-seeding/dist/cli.js seed -d ormconfig.ts src/seeder/**/*.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,22 +26,60 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/bull": "^10.1.1",
+    "@nestjs/bullmq": "^10.2.0",
+    "@nestjs/cache-manager": "^2.2.2",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/common": "11.0.9",
+    "@nestjs/core": "11.0.9",
+    "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/graphql": "^12.0.7",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.3.7",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "3.0.1",
+    "@nestjs/swagger": "^11.0.3",
+    "@nestjs/typeorm": "^10.0.2",
+    "@ptc-org/nestjs-query-core": "^3.0.0",
+    "@ptc-org/nestjs-query-graphql": "^3.0.0",
+    "@ptc-org/nestjs-query-typeorm": "^3.0.0",
+    "@types/lodash": "^4.14.202",
+    "axios": "^1.6.8",
+    "bull": "^4.12.2",
+    "cache-manager": "^5.1.3",
+    "cache-manager-ioredis": "^2.1.0",
+    "dayjs": "^1.11.13",
+    "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-type-json": "^0.3.2",
+    "joi": "^17.12.1",
+    "lodash": "^4.17.21",
+    "nanoid": "3.3.4",
+    "nestjs-dev-utilities": "^0.0.2",
+    "nestjs-typed-cqrs": "^0.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
+    "@jorgebodega/typeorm-seeding": "^7.1.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cache-manager-ioredis": "^2.0.6",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
