--- a/.env
+++ b/.env
@@ -23,3 +23,9 @@ REDIS_CACHE_HOST=localhost
 REDIS_CACHE_PORT=6379
 REDIS_CACHE_PASSWORD=
 CACHE_TTL=3600
+
+JWT_SECRET=your-256-bit-secret
+JWT_EXPIRATION_TIME=30d
+
+ADMIN_EMAIL=your-email
+
