feat: tell the admin email

--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ CACHE_TTL=3600
 JWT_SECRET=your-256-bit-secret
 JWT_EXPIRATION_TIME=30d
 
-ADMIN_EMAIL=your-email
+ADMIN_EMAIL=your-email # this email need the email u sign in with google 
 
