--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       NODE_ENV: development
       JWT_SECRET: your-secret-key
       JWT_EXPIRATION_TIME: 30d
-      ADMIN_EMAIL: matchartproduction@gmail.com # change this for ur google email
+      ADMIN_EMAIL: your-email@gmail.com # change this for ur google email, for role admin purpose
       PROJECT_DB_HOST: postgres
       PROJECT_DB_PORT: 5432
       PROJECT_DB_USERNAME: postgres
